# Shoot

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Camera.h  Game.cpp  Game.h  GeometryBase.cpp  Makefile  Model.h  ObjModel.h  ObjModel_test.cpp  README.md  Shader.h  Shoot  a.out  box.cpp  box.h  box_renderer.cpp  box_renderer.h  cannon.h  cmake_install.cmake  doc.md  game.cpp  game.h  gameBodyBase.cpp  gameBodyBase.h  game_body_base.cpp  game_body_base.h  geometryBase.cpp  geometry_base.h  light.h  main.cpp  main.exec  makefile  mesh.h  model.cpp  model.h  modelmain.cpp  objloader.cpp  objloader.h  (+7 more)
Breakout/: a.out  game.cpp  resource_manager.cpp  resource_manager.h
Example/: main.cpp  makefile
Example/shaders/: box.frag  lighting.frag  lighting.vs
experiment/: CMakeLists.txt  Rocket  a.out  camera.h  normal_map  normal_mapping.cpp  normal_point_shadows.frag  normal_point_shadows.vs  point_shadows  point_shadows.cpp  point_shadows.frag  resource_manager.cpp  resource_manager.h
experiment/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
legacy/: Mesh.h  Model.h  ObjModel.cpp  ObjModel.h  modelmain.cpp  obj.h  texture.cpp  texture.h
legacy/Breakout/: Makefile  game.cpp  game.h  game_object.cpp  game_object.h  program.cpp  shader.cpp  shader.h  sprite_renderer.cpp  sprite_renderer.h
legacy/Example/: Camera.h  a.out  makefile
legacy/physics/: Mass.h  Simulation.h
models/: Blonde Elexis - nude.mtl  Naval cannon.max  Naval cannon.mtl  Readme.txt  STONE.3ds  sphere.3ds  sphere.c4d  sphere.dae  sphere.mtl  sphere.ply
models/HarryPotter/: Hogwarts.lws  ReadMe.TXT
models/Texture/: Boots_n.tga  Face.tga  Face_normal.tga  Hair.tga  eyeball_l.tga  eyeball_r.tga  eyes.tga  eyes_normal.tga  mouth.tga
models/portal/: portalgun.mtl  portalgun1.mtl
physics/dynamics/: q3Body.cpp  q3Body.h
rocket_model/experiment/: CMakeLists.txt  Rocket  a.out  camera.h  game_object.h  particle.frag  particle.vs  particle_generator.cpp  particle_generator.h  point_shadows.cpp  point_shadows.frag  resource_manager.cpp  resource_manager.h  texture.cpp
shaders/: lighting.frag  lighting.vs  normal_mapping.frag  particle.frag  particle.vs  point_shadows.frag  point_shadows.vs  shadow.frag  skybox.vs
shadow/3.1.shadow_mapping/: a.out  camera.h  shader.h  shadow_mapping.cpp
shadow/3.2.point_shadows/: a.out  point_shadows.cpp  point_shadows.frag
skybox/2/: Untitled.ipynb
skybox/3/: t.sh
